script.js, room.ejs and stylesheet.css has been edited to present a visual change in the mute, stop video icon & their texts as they are being toggled and text exchange feature has been enhanced with auto-scroll down, proper text wrapping and proper aligning of messages relative to the users

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -56,10 +56,19 @@ body {
     cursor: pointer;
     background-color: #122222;
     color: #d8d8d8;
+    white-space: nowrap;
 }
 
 .control-button:hover {
     background-color: #515151;
+}
+
+.stop-button {
+    min-width: 95.28px;
+}
+
+.unmute, .play-video {
+    color: red;
 }
 
 .leave-meeting {
@@ -68,6 +77,7 @@ body {
 
 .main-right {
     flex: 0.3;
+    /* max-width: 30%; */
     display: flex;
     flex-direction: column;
     background-color: #242322;
@@ -81,7 +91,13 @@ body {
 
 .chat-area {
     flex: 1;
-    overflow: auto;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    scroll-behavior: smooth;
+}
+
+.chat-area::-webkit-scrollbar {
+    width: 0;
 }
 
 .chats {
@@ -100,6 +116,14 @@ body {
     color: #ffffff;
     outline: none;
     border: none;
+}
+
+.message {
+    border-radius:5px; 
+    background-color: rgba(94, 94, 94, 0.4); 
+    padding: 3% 5%; 
+    width: fit-content; 
+    word-break: break-all;
 }
 
 video {
